--- a/Agendamento/WebContent/TemplatePadrao.xhtml
+++ b/Agendamento/WebContent/TemplatePadrao.xhtml
@@ -8,15 +8,11 @@
         <title>#{titulo}</title>
     </h:head>
     <h:body>
-        <div>
-        	<ui:insert name="cabecalho"/>
+        <div><ui:insert name="cabecalho"/>
             <h:outputText value="Cabecalho"/>
         </div>
-        <div>
-        	<ui:insert name="corpo"/>
-        </div>
-        <div>
-        	<ui:insert name="rodape"/>
+        <div><ui:insert name="corpo"/> </div>
+        <div><ui:insert name="rodape"/>
             <h:outputText value="Rodape"/>
         </div>
     </h:body>
