--- a/Agendamento/WebContent/formProjetor.xhtml
+++ b/Agendamento/WebContent/formProjetor.xhtml
@@ -23,6 +23,9 @@
 					<h:message for="campus"/>
 		
 				</h:panelGrid>
+				
+				<h:commandButton value="Salvar" action="#{projetorUC.salvar}"/>
+                <h:commandButton value="Cancelar" action="#{projetorUC.cancelar}" immediate="true"/>
 			</h:form>
 			</ui:define>
     </ui:composition>
