--- a/Agendamento/WebContent/formProjetor.xhtml
+++ b/Agendamento/WebContent/formProjetor.xhtml
@@ -10,7 +10,7 @@
 			<h:form>
 				<h:panelGrid columns="3">
 				    <h:outputLabel value="N&uacute;mero do Patrim&ocirc;nio"/>
-					<h:outputText id="patrimonio" value="#{projetorUC.projetor.numeroPatrimonio}" required="true"/>
+					<h:inputText id="patrimonio" value="#{projetorUC.projetor.numeroPatrimonio}" required="true"/>
 					<h:message for="patrimonio"/>
 		
 				    <h:outputLabel value="Campus"/>
