--- a/Agendamento/WebContent/listarProjetor.xhtml
+++ b/Agendamento/WebContent/listarProjetor.xhtml
@@ -26,7 +26,7 @@
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{projetorUC.novo}" value="Novo"/>
-                <h:commandLink action="index" value="Home"/>
+                <h:commandLink action="indexAdmin" value="Home"/>
             </h:form>
         </ui:define>
     </ui:composition>
