--- a/Agendamento/WebContent/listarSala.xhtml
+++ b/Agendamento/WebContent/listarSala.xhtml
@@ -32,7 +32,7 @@
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{salaUC.novo}" value="Novo"/>
-                <h:commandLink action="index" value="Home"/>
+                <h:commandLink action="indexAdmin" value="Home"/>
             </h:form>
         </ui:define>
     </ui:composition>
