Ajustes no menu

--- a/Agendamento/WebContent/listarUsuario.xhtml
+++ b/Agendamento/WebContent/listarUsuario.xhtml
@@ -32,7 +32,7 @@
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{usuarioUC.novo}" value="Novo"/>
-                <h:commandLink action="indexAdmin" value="Home"/>
+                <h:link outcome="indexAdmin" value="Home"/>
             </h:form>
         </ui:define>
     </ui:composition>
