--- a/Agendamento/WebContent/listarProjetor.xhtml
+++ b/Agendamento/WebContent/listarProjetor.xhtml
@@ -22,7 +22,9 @@
                         <h:outputText value="#{projetor.campus}"/>
                     </h:column>
                     <h:column>
-                        <h:commandLink action="#{projetorUC.selecione}" value="Editar"/>
+                        <h:commandLink action="#{projetorUC.selecione}">
+                        	<h:graphicImage url="/icones/editar.png"/>
+                        </h:commandLink>
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{projetorUC.novo}" value="Novo"/>
