--- a/Agendamento/WebContent/listarUsuario.xhtml
+++ b/Agendamento/WebContent/listarUsuario.xhtml
@@ -23,12 +23,14 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="Func&ccedil;&atilde;o"/>
+                            <h:outputText value="Fun&ccedil;&atilde;o"/>
                         </f:facet>
                         <h:outputText value="#{usuario.funcao}"/>
                     </h:column>
                     <h:column>
-                        <h:commandLink action="#{usuarioUC.selecione}" value="Editar"/>
+                        <h:commandLink action="#{usuarioUC.selecione}">
+                        	<h:graphicImage url="/icones/editar.png"/>
+                        </h:commandLink>
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{usuarioUC.novo}" value="Novo"/>
