--- a/Agendamento/WebContent/formReserva.xhtml
+++ b/Agendamento/WebContent/formReserva.xhtml
@@ -10,25 +10,13 @@
 			<h:form>
 				<h:panelGrid columns="3">
 				    <h:outputLabel value="Data"/>
-					<h:inputText id="data" value="#{reservaUC.reserva.data}" required="true"/>
+					<h:inputText id="data" value="#{reservaUC.reserva.data}" required="true">
+						<f:convertDateTime pattern="dd/MM/yyyy"/>
+					</h:inputText>
 					<h:message for="data"/>
 		
-					<h:selectOneMenu value="reservaUC.reserva.horario">
-						<f:selectItem itemLabel="1" itemValue="1"/>
-						<f:selectItem itemLabel="2" itemValue="2"/>
-						<f:selectItem itemLabel="3" itemValue="3"/>
-						<f:selectItem itemLabel="4" itemValue="4"/>
-						<f:selectItem itemLabel="5" itemValue="5"/>
-						<f:selectItem itemLabel="6" itemValue="6"/>
-						<f:selectItem itemLabel="7" itemValue="7"/>
-						<f:selectItem itemLabel="8" itemValue="8"/>
-						<f:selectItem itemLabel="9" itemValue="9"/>
-						<f:selectItem itemLabel="10" itemValue="10"/>
-						<f:selectItem itemLabel="11" itemValue="11"/>
-						<f:selectItem itemLabel="12" itemValue="12"/>
-						<f:selectItem itemLabel="13" itemValue="13"/>
-						<f:selectItem itemLabel="14" itemValue="14"/>
-						<f:selectItem itemLabel="15" itemValue="15"/>
+					<h:selectOneMenu value="#{reservaUC.reserva.horario}">
+						 <f:selectItems value="#{reservaUC.horarios}" var="horario" itemLabel="#{horario}"/>
 					</h:selectOneMenu>
 		
 				    <h:outputLabel value="Campus"/>
