Página de estilos

--- a/Agendamento/WebContent/TemplatePadrao.xhtml
+++ b/Agendamento/WebContent/TemplatePadrao.xhtml
@@ -8,6 +8,7 @@
 	>
 <h:head>
 	<title>#{titulo}</title>
+	<link href="#{facesContext.externalContext.requestContextPath}/css/estilo.css" rel="stylesheet" type="text/css" />
 </h:head>
 <h:body>
 	<div><ui:insert name="cabecalho" /> <h:outputText
