--- a/Agendamento/WebContent/listarUsuario.xhtml
+++ b/Agendamento/WebContent/listarUsuario.xhtml
@@ -8,7 +8,7 @@
         <ui:param name="titulo" value="Lista de Usu&aacute;rios"/>
         <ui:define name="corpo">
             <h:form>
-                <h:dataTable value="#{usuarioUC.usuarios}" var="usuario" binding="#{usuarioUC.select}">
+                <h:dataTable value="#{usuarioUC.usuarios}" var="usuario" binding="#{usuarioUC.select}" headerClass="cabecalho" rowClasses="impar,par" styleClass="tabela">
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Nick"/>
