--- a/Agendamento/WebContent/listarProjetor.xhtml
+++ b/Agendamento/WebContent/listarProjetor.xhtml
@@ -8,7 +8,7 @@
         <ui:param name="titulo" value="Lista de Projetores"/>
         <ui:define name="corpo">
             <h:form>
-                <h:dataTable value="#{projetorUC.projetores}" var="projetor" binding="#{projetorUC.select}">
+                <h:dataTable value="#{projetorUC.projetores}" var="projetor" binding="#{projetorUC.select}" headerClass="cabecalho" rowClasses="impar,par" styleClass="tabela">
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="N&uacute;mero do Patrim&ocirc;nio"/>
