--- a/Agendamento/WebContent/listarSala.xhtml
+++ b/Agendamento/WebContent/listarSala.xhtml
@@ -8,7 +8,7 @@
         <ui:param name="titulo" value="Lista de Salas"/>
         <ui:define name="corpo">
             <h:form>
-                <h:dataTable value="#{salaUC.salas}" var="sala" binding="#{salaUC.select}">
+                <h:dataTable value="#{salaUC.salas}" var="sala" binding="#{salaUC.select}" headerClass="cabecalho" rowClasses="impar,par" styleClass="tabela">
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="Sala"/>
