--- a/Agendamento/WebContent/TemplatePadrao.xhtml
+++ b/Agendamento/WebContent/TemplatePadrao.xhtml
@@ -11,27 +11,30 @@
 	<link href="#{facesContext.externalContext.requestContextPath}/css/estilo.css" rel="stylesheet" type="text/css" />
 </h:head>
 <h:body styleClass="corpo">
-	<div><ui:insert name="cabecalho" /> <h:outputText
+	<div id="site">
+	<div id="cabecalho"><ui:insert name="cabecalho" /> <h:outputText
 		value="Cabecalho" /></div>
 	<div id="menu">
-	
+		<ul>
 		<c:if test="${usuarioUC.usuarioLogado.funcao == 'a'}">
 			<h:link outcome="listarUsuario" value="Usu&aacute;rios" /> 
 			<h:link outcome="listarSala" value="Salas" /> 
 			<h:link outcome="listarProjetor" value="Projetores" />
 		</c:if>
 		<c:if test="${usuarioUC.usuarioLogado.funcao == 'p'}">
-			<h:link outcome="formReserva" value="Reservar Projetor" />
+			<li><h:link outcome="formReserva" value="Reservar Projetor" /></li>
 		</c:if>
 		<c:if test="${usuarioUC.usuarioLogado.funcao == 'i'}">
-			<h:link outcome="Instalar Projetor" value="instalarProjetor" />
+			<li><h:link outcome="Instalar Projetor" value="instalarProjetor" /></li>
 		</c:if> 
 		<h:form>
-			<h:commandLink action="${usuarioUC.logout}" value="Sair" /> <br />
+			<li><h:commandLink action="${usuarioUC.logout}" value="Sair" /> <br /></li>
 		</h:form>
+		</ul>
 	</div>
-	<div><ui:insert name="corpo" /></div>
-	<div><ui:insert name="rodape" /> <h:outputText value="Rodape" />
+	<div id="corpo"><ui:insert name="corpo" /></div>
+	<div id="rodape"><ui:insert name="rodape" /> <h:outputText value="Rodape" />
+	</div>
 	</div>
 </h:body>
 </html>
