--- a/Agendamento/WebContent/listarUsuario.xhtml
+++ b/Agendamento/WebContent/listarUsuario.xhtml
@@ -27,7 +27,7 @@
                         <f:facet name="header">
                             <h:outputText value="Fun&ccedil;&atilde;o"/>
                         </f:facet>
-                        <h:outputText value="#{usuario.funcao}"/>
+                        <h:outputText value="#{usuario.descFuncao}"/>
                     </h:column>
                 </h:dataTable>
                 <h:commandLink action="#{usuarioUC.novo}" value="Novo"/>
