--- a/Agendamento/WebContent/formReserva.xhtml
+++ b/Agendamento/WebContent/formReserva.xhtml
@@ -8,6 +8,7 @@
         <ui:param name="titulo" value="Reserva de Projetores"/>
         <ui:define name="corpo">
 			<h:form>
+				<h:messages></h:messages>
 				<h:panelGrid columns="3">
 				    <h:outputLabel value="Data:"/>
 					<h:inputText id="data" value="#{reservaUC.reserva.data}" required="true">
