--- a/Agendamento/WebContent/formUsuario.xhtml
+++ b/Agendamento/WebContent/formUsuario.xhtml
@@ -14,7 +14,7 @@
 				<h:message for="nick"/>
 			
 			    <h:outputLabel value="Senha"/>
-				<h:inputText id="senha" value="#{usuarioUC.usuario.senha}"/>
+				<h:inputSecret id="senha" value="#{usuarioUC.usuario.senha}"/>
 				<h:message for="senha"/>
 	
 			    <h:outputLabel value="E-Mail"/>
