--- a/Agendamento/WebContent/TemplatePadrao.xhtml
+++ b/Agendamento/WebContent/TemplatePadrao.xhtml
@@ -19,7 +19,7 @@
 		<ul>
 		<h:form>
 			<c:if test="${usuarioUC.usuarioLogado.funcao == 'a'}">
-				<li><h:link outcome="listarUsuario" value="Usu&aacute;rios" /> </li>
+				<li><h:link outcome="listarUsuario" value="Usu&aacute;rios" /></li> 
 				<li><h:link outcome="listarSala" value="Salas" /> </li>
 				<li><h:link outcome="listarProjetor" value="Projetores" /></li>
 			</c:if>
@@ -27,7 +27,7 @@
 				<li><h:commandLink action="${reservaUC.novo}" value="Reservar Projetor" /></li>
 			</c:if>
 			<c:if test="${usuarioUC.usuarioLogado.funcao == 'i'}">
-				<li><h:commandLink action="${reservaUC.novaInstalacao}" value="Instalar Projetor" /></li>
+				<li><h:commandLink action="${reservaUC.realizarInstalacao}" value="Instalar Projetor" /></li>
 			</c:if> 
 			<li><h:commandLink immediate="true" action="${usuarioUC.logout}" value="Sair" /> <br /></li>
 		</h:form>
