--- a/Agendamento/WebContent/bancoInicializado.xhtml
+++ b/Agendamento/WebContent/bancoInicializado.xhtml
@@ -1,17 +1,18 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html">
-    <h:head>
-        <title>Sucesso</title>
-        <link href="#{facesContext.externalContext.requestContextPath}/css/estilo.css" rel="stylesheet" type="text/css" />
-    </h:head>
-    <h:body>
+
+    <ui:composition template="TemplatePadrao.xhtml">
+        <ui:param name="titulo" value="Instala&ccedil;&atilde;o de Projetores"/>
+        <ui:define name="corpo">
     	<div id="mensagem">
 			<h:outputLabel value="Banco inicializado com sucesso!"/><br/>
 			<h:outputLabel value="Nick: admin"/><br/>
-			<h:outputLabel value="Senha:admin"/>
+			<h:outputLabel value="Senha: admin"/>
 		</div>
 		<h:link outcome="index" value="Logar" /> 
-	 </h:body>
+	 	</ui:define>
+    </ui:composition>
 </html>
